Fixing cutoff in some browsers

--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -3,7 +3,7 @@
   ==== RESETS
 ****************************************/
 
-html,body,div,canvas { margin: 5px; padding: 5px; }
+html,body,div,canvas { margin: 0; padding: 0; }
 ::-moz-selection { color: #333; text-shadow: none; }
 ::selection {  color: #333; text-shadow: none; }
 .clear:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
@@ -14,7 +14,7 @@ html,body,div,canvas { margin: 5px; padding: 5px; }
   ==== LAYOUT
 ****************************************/
 
-html, body { width: 100%; height: 100%; font-family: Helvetica, Verdana, Arial, sans-serif; text-align:justify; padding-left:30px; padding-bottom:30px; color:#808080 }
+html, body { width: 100%; height: 100%; font-family: Helvetica, Verdana, Arial, sans-serif; text-align:justify; padding-left:30px; padding-bottom:30px; padding-top:20px; color:#808080 }
 body { }
 p.header, p.footer { display: none; }
 div.logo { width: 204px; height: 38px; float: left; background: url(logo.png) 0 0 no-repeat; position: relative; z-index: 10; }
